--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Md. Fahad Rahman",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^26.2.4"
+    "electron": "^26.2.4",
+    "electron-builder": "^24.6.4"
   }
 }
