--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -3,7 +3,8 @@ productName: Daily Routine
 directories:
   output: dist
 files:
-  - name: dist
-  - name: node_modules
+  - dist
+  - node_modules
 win:
   target: nsis
+  icon: ../assets/win-icon.ico
