--- a/src/package.json
+++ b/src/package.json
@@ -2,7 +2,7 @@
   "name": "dailyroutine",
   "version": "1.0.0",
   "description": "A simple daily routine",
-  "main": "widget.js",
+  "main": "src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron main.js"
@@ -10,6 +10,7 @@
   "author": "Md. Fahad Rahman",
   "license": "ISC",
   "devDependencies": {
+    "@electron-forge/cli": "^6.4.2",
     "electron": "^26.2.4",
     "electron-builder": "^24.6.4"
   }
