Add config for electron forge

--- a/package.json
+++ b/package.json
@@ -13,5 +13,14 @@
     "@electron-forge/cli": "^6.4.2",
     "electron": "^26.2.4",
     "electron-builder": "^24.6.4"
+  },
+  "config": {
+    "forge": {
+      "packagerConfig": {
+        "win32": {
+          "target": "nsis"
+        }
+      }
+    }
   }
 }
